update sending email, reset password and create refreshing tokena and repair authentication